Keep Android 8 compatibility and retry pending result notifications